--- a/src/templates/ubuntu/20/data/ubuntu-server-cloud-init.yaml
+++ b/src/templates/ubuntu/20/data/ubuntu-server-cloud-init.yaml
@@ -22,6 +22,18 @@ autoinstall:
     hostname: ${hostname}
     username: ${username}
     password: ${password_encrypted}
+  network:
+    network:
+    version: 2
+    ethernets:
+      ens160:
+        dhcp4: false
+        dchp6: false
+        addresses:
+          - ${ip}
+        gateway4: ${gateway}
+        nameservers:
+          addresses: [$(nameservers)]
   ssh:
     install-server: true
     allow-pw: true
