feat: Add cleanup script to example files.

--- a/src/app/general/variables.vmware.pkrvars.hcl.example
+++ b/src/app/general/variables.vmware.pkrvars.hcl.example
@@ -7,4 +7,9 @@ hypervisor = {
   type        = "esx5"
   datastore   = "datastore1"
   insecure    = true
+  provision   = {
+    cleanup     = [
+      "./scripts/cleanup/00-cleanup.sh"
+    ]
+  }
 }
