--- a/src/templates/ubuntu/20/data/ubuntu-server-cloud-init.yaml
+++ b/src/templates/ubuntu/20/data/ubuntu-server-cloud-init.yaml
@@ -5,10 +5,19 @@ autoinstall:
     geoip: true
     preserve_sources_list: true
     primary:
-      - arches: [amd64, i386]
+      - arches: [default, amd64, aarch64, i386]
+        uri: http://free.nchc.org.tw/ubuntu
+      - arches: [default, amd64, aarch64, i386]
         uri: http://tw.archive.ubuntu.com/ubuntu
-      - arches: [default]
-        uri: http://ports.ubuntu.com/ubuntu-ports
+      - arches: [default, amd64, aarch64, i386]
+        uri: http://archive.ubuntu.com/ubuntu
+    security:
+      - arches: [default, amd64, aarch64, i386]
+        uri: http://free.nchc.org.tw/ubuntu
+      - arches: [default, amd64, aarch64, i386]
+        uri: http://tw.archive.ubuntu.com/ubuntu
+      - arches: [default, amd64, aarch64, i386]
+        uri: http://archive.ubuntu.com/ubuntu
   early-commands:
     # Ensures that Packer does not connect too soon.
     - sudo systemctl stop ssh
