feat: Disable `preserve_sources_list` cloud-init feature.

--- a/src/templates/ubuntu/20/data/ubuntu-server-cloud-init.yaml
+++ b/src/templates/ubuntu/20/data/ubuntu-server-cloud-init.yaml
@@ -3,7 +3,7 @@ autoinstall:
   version: 1
   apt:
     geoip: true
-    preserve_sources_list: true
+    preserve_sources_list: false
     primary:
       - arches: [default, amd64, aarch64, i386]
         uri: http://free.nchc.org.tw/ubuntu
