feat: Rename VM instances.

--- a/src/app/agh-db/variables.agh-db.pkrvars.hcl.example
+++ b/src/app/agh-db/variables.agh-db.pkrvars.hcl.example
@@ -1,5 +1,5 @@
 vm = {
-  name        = "AGH-DB"
+  name        = "ArgusHack-DB"
   hw          = {
     type        = "ubuntu-64"
     cpus        = 8
