feat: Add `lsb-release` to cloud-init pre-install packages.

--- a/src/templates/ubuntu/20/data/ubuntu-server-cloud-init.yaml
+++ b/src/templates/ubuntu/20/data/ubuntu-server-cloud-init.yaml
@@ -60,6 +60,7 @@ autoinstall:
     - ca-certificates
     - curl
     - wget
+    - lsb-release
   user-data:
     disable_root: false
     package_update: true
